# RealTimeGUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: display.json  io.json
src/: KPlotStreamer.cpp  KPlotStreamer.h  WidgetConfig.cpp  WidgetConfig.h  WidgetLog.cpp  WidgetLog.h  app.cpp  app.h  main.cpp  mpNC.h  processor.cpp  processor.h
